[gd_scene load_steps=2 format=3 uid="uid://brbjw345ktjno"]

[ext_resource type="Script" uid="uid://5hkolneategg" path="res://src/ui/game_end/game_end.gd" id="1_vb4tj"]

[node name="GameEnd" type="CanvasLayer"]
script = ExtResource("1_vb4tj")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.611765)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -55.5
offset_right = 80.0
offset_bottom = 55.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "你死了"

[node name="RestartGameButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "重新游戏"

[node name="GoBackMainMenuButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "返回主界面"
